fix memory options under windows